--- a/template/Admin/custom-template-management.html
+++ b/template/Admin/custom-template-management.html
@@ -96,7 +96,7 @@
                                 <li><a href="user-profile.html"><i data-feather="user"></i><span>Account</span></a></li>
                                 <!-- <li><a href="email_inbox.html"><i data-feather="mail"></i><span>Inbox</span></a></li> -->
                                 <!-- <li><a href="edit-profile.html"><i data-feather="settings"></i><span>Settings</span></a></li> -->
-                                <li><a href="login.html"><i data-feather="log-in"> </i><span>Log in</span></a></li>
+                                <li><a href="../login.html"><i data-feather="log-in"> </i><span>Log in</span></a></li>
                             </ul>
                         </li>
                     </ul>
@@ -414,24 +414,14 @@
                                         <fieldset>
                                             <div class="row questionnaire-section">
                                                 <div class="col-lg-6">
-                                                    <label>Tag1</label>
-                                                    <input class=" form-control" type="text" placeholder="Name" readonly>
-                                                    <label>Tag2</label>
-                                                    <input class=" form-control" type="text" placeholder="Address" readonly>
-                                                    <label>Tag3</label>
-                                                    <input class=" form-control" type="text" placeholder="company" readonly>
-                                                    <label>Tag4</label>
-                                                    <input class=" form-control" type="text" placeholder="date" readonly>
+                                                    <label>Tag title</label>
+                                                    <input class=" form-control" type="text" placeholder="" >
+                                                    
                                                 </div>
                                                 <div class="col-lg-6">
-                                                    <label>Answer1</label>
+                                                    <label>Tag code</label>
                                                     <input class=" form-control" type="text" placeholder="" required="">
-                                                    <label>Answer2</label>
-                                                    <input class=" form-control" type="text" placeholder="" required="">
-                                                    <label>Answer3</label>
-                                                    <input class=" form-control" type="text" placeholder="" required="">
-                                                    <label>Answer4</label>
-                                                    <input class=" form-control" type="text" placeholder="" required="">
+                                                    
                                                 </div>
                                                 <div class="row m-t-10">
                                                     <div class="col-lg-12">
