--- a/template/User/temp-pricing.html
+++ b/template/User/temp-pricing.html
@@ -73,9 +73,8 @@
                 <div class="account-user"><i data-feather="user"></i></div>
                 <ul class="profile-dropdown onhover-show-div">
                   <li><a href="user-profile.html"><i data-feather="user"></i><span>Account</span></a></li>
-                  <li><a href="email_inbox.html"><i data-feather="mail"></i><span>Inbox</span></a></li>
-                  <li><a href="edit-profile.html"><i data-feather="settings"></i><span>Settings</span></a></li>
-                  <li><a href="login.html"><i data-feather="log-in"> </i><span>Log in</span></a></li>
+
+                  <li><a href="../login.html"><i data-feather="log-in"> </i><span>Log in</span></a></li>
                 </ul>
               </li>
             </ul>
@@ -257,18 +256,7 @@
           </div>
         </div>
         <!-- footer start-->
-        <footer class="footer">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-md-6 p-0 footer-left">
-                <p class="mb-0">Copyright © 2023 Tivo. All rights reserved.</p>
-              </div>
-              <div class="col-md-6 p-0 footer-right">
-                <p class="mb-0">Hand-crafted & made with <i class="fa fa-heart font-danger"></i></p>
-              </div>
-            </div>
-          </div>
-        </footer>
+
       </div>
     </div>
     <!-- latest jquery-->
